--- a/404.md
+++ b/404.md
@@ -1,4 +1,7 @@
-# 404 - Page Not Found
+---
+layout: default
+title: 404 - Page Not Found
+---
 
 Sorry, but the squirrel was unable to remember where it burried this page.
 
